redash-prd/kubernetes/postgres-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.kompose.service: postgres-deploy
  name: postgres-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        io.kompose.service: postgres-deploy
    spec:
      containers:
      - image: postgres:10.5-alpine
        name: postgres-deploy
        volumeMounts:
        - mountPath: "/data"
          name: postgres-vol
      volumes:
      - name: postgres-vol
        persistentVolumeClaim:
          claimName: postgres-pvc
      restartPolicy: Always
