redash-prd/kubernetes/redashserver-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.kompose.service: redashserver-deploy
  name: redashserver-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        io.kompose.service: redashserver-deploy
    spec:
      containers:
      - args:
        - server
        image: lks21c/redash:5.0.1
        name: redashserver-deploy
        ports:
        - containerPort: 5000
      restartPolicy: Always
