redash-prd/kubernetes/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redis
  name: redis-svc
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    io.kompose.service: redis
