redash-prd/kubernetes/worker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: worker
  name: worker
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    io.kompose.service: worker
status:
  loadBalancer: {}
